--- a/style.css
+++ b/style.css
@@ -29,8 +29,14 @@
 }
 
 .calculator-display {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 0rem 1rem;
     height: 25%;
     background-color: #000000dd;
+    color: white;
+    font-size: 2rem;
 }
 
 .calculator-buttons {
